Change 'step' to more correct 'model'

--- a/vermouth/tests/data/integration_tests/tier-0/mini-protein1_betasheet/README
+++ b/vermouth/tests/data/integration_tests/tier-0/mini-protein1_betasheet/README
@@ -1,7 +1,7 @@
 ### DETAILS: 
 
 # Original PDB CODE: 1ICO 
-# Structure from NMR experiment: select the first step to martinize
+# Structure from NMR experiment: select the first model to martinize
 # Replace the residue name DPR (d-proline, residue 8) and DAL (d-alanine, residue 23) for PRO and ALA
 # Maybe could be used to test d- amino acids
 
