--- a/vermouth/tests/data/integration_tests/tier-0/mini-protein3_trp-cage/README
+++ b/vermouth/tests/data/integration_tests/tier-0/mini-protein3_trp-cage/README
@@ -1,7 +1,7 @@
 ### DETAILS: 
 
 # Original PDB CODE:1L2Y 
-# Structure from NMR experiment: select the first step to martinize
+# Structure from NMR experiment: select the first model to martinize
 
 ### TEST: 
 
