--- a/vermouth/tests/data/integration_tests/tier-0/mini-protein2_helix/README
+++ b/vermouth/tests/data/integration_tests/tier-0/mini-protein2_helix/README
@@ -1,7 +1,7 @@
 ### DETAILS: 
 
 # Original PDB CODE:5UOI 
-# Structure from NMR experiment: select the first step to martinize
+# Structure from NMR experiment: select the first model to martinize
 # One of the missing oxygen atoms of the C-terminal was added to make martinize2 to work. 
 
 ### TEST: 
